# demo-behave

./: .env  .gitignore  Dockerfile  README.md  behave.ini  pyproject.toml
src/: main.py  models.py
src/routers/: books_router.py  movies_router.py
tests/behave/features/: books.feature  movies.feature
tests/behave/features/steps/: api_steps.py  books_steps.py  config.py  movies_steps.py
