[project]
name = "demo-behave"
version = "0.1.0"
description = ""
authors = [
    {name = "Renan Rodrigues",email = "renanpelicari@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.121.1,<0.122.0)",
    "behave (>=1.3.3,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "routers", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
